made scrollbar always visible to prevent jarring

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,7 @@ html {
 	background-color: $black;
 	height: 100%;
 	width: 100%;
+	overflow-y: scroll;
 }
 
 body {
